--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,52 @@
         <!-- Styles -->
         <link href="/css/app.css" rel="stylesheet" type="text/css"/>
 
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/00b5743fd3.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <div class="">
-            
-        </div>
+        <main class="x-content">
+            <img src="/img/logo.jpg" class="logo" draggable="false" alt="logo" />
+
+            <ul class="nav">
+                <!--
+                <li class="nav-item">
+                    <a class="nav-link spotify"  href="#">
+                        <i class="fab fa-spotify"></i>
+                    </a>
+                </li>
+                -->
+
+                <li class="nav-item">
+                    <a class="nav-link twitter"  href="https://twitter.com/wehatethursdays">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link instagram" href="https://www.instagram.com/wehatethursdays/">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link youtube" href="https://www.youtube.com/channel/UC0XgV9htI1nrkIj6yA-_3DA">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+            </ul>
+        </main>
+
+        <footer>
+            <div class="container">
+                Copyright &copy; WeHateThursdays 2020
+            </div>
+        </footer>
 
         <script src="/js/app.js" type="text/javascript">
         </script>
