--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
 
         <!-- Icons -->
         <script src="https://kit.fontawesome.com/00b5743fd3.js" crossorigin="anonymous"></script>
+
+        <!-- Google Analytics Tracking -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4VK94QC80Q"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-4VK94QC80Q');
+        </script>
     </head>
 
     <body>
